# lambda-workflow

./: .gitignore  Cargo.toml  README.md  TODO.md
crates/model/: Cargo.toml
crates/model/src/: env.rs  invocation.rs  lib.rs  task.rs
crates/service/: Cargo.toml
crates/service/src/: dummy_service.rs  lib.rs  service_dummy.rs  service_sqs.rs  sqs_service.rs
crates/service_sqs/: Cargo.toml
crates/service_sqs/src/: lib.rs
crates/state/: Cargo.toml
crates/state/src/: lib.rs
crates/state_dynamodb/: Cargo.toml
crates/state_dynamodb/src/: idempotency_record.rs  lib.rs
crates/state_in_memory/: Cargo.toml
crates/state_in_memory/src/: lib.rs
crates/test_utils/: Cargo.toml
crates/test_utils/src/: lib.rs
crates/workflow/: Cargo.toml
crates/workflow/src/: batch_handler.rs  context.rs  engine.rs  lib.rs  runtime.rs
examples/workflow_greeter/: Cargo.toml
examples/workflow_greeter/src/: main.rs  service_name.rs
examples/workflow_greeter/tests/: integration_test.rs  run.sh
examples/workflow_greeter/tests/requests/: request.json  update.json
examples/workflow_greeter/tests/service_name/: index.js
examples/workflow_greeter/tests/terraform/: .terraform.lock.hcl  main.tf  variables.tf
examples/workflow_simple/: Cargo.toml
examples/workflow_simple/src/: dummy_dispatcher.rs  lib.rs  main.rs  noop_dispatcher.rs  service_example.rs
examples/workflow_sqs/: Cargo.toml
examples/workflow_sqs/src/: main.rs  service_greeter.rs  service_name.rs
src/: in_memory_state.rs  logger.rs  main.rs  model.rs  service.rs  sqs_service.rs  state.rs  workflow_engine.rs  workflow_example.rs  workflow_fn.rs  workflow_handler.rs
terraform/modules/lambda_async/: iam.tf  main.tf  outputs.tf  variables.tf
