[workspace]
members = ["crates/*", "examples/*"]
resolver = "3"

[workspace.dependencies]
aws_lambda_events = { version = "0.16.0", default-features = false, features = ["sqs"] }
aws-config = "1.6.3"
aws-sdk-sqs = "1.72.0"
aws-sdk-dynamodb = "1.79.0"
aws-smithy-mocks = "0.1.1"

serde = "1.0.219"
serde_json = "1.0.140"

lambda_runtime = "0.14.1"
tokio = { version = "1", features = ["macros"] }
futures = "0.3.31"
async-trait = "0.1.88"