[package]
name = "state_dynamodb"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = {workspace = true }
serde = {workspace = true }
serde_dynamo = {workspace = true}

aws-sdk-dynamodb = { workspace = true }

async-trait = {workspace = true}

state = { path = "../state"}
model = { path = "../model"}
