[package]
name = "workflow"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

lambda_runtime = { workspace = true }
aws_lambda_events = { workspace = true }
aws-sdk-sqs = { workspace = true }
aws-config = { workspace = true }

tokio = {workspace = true, features = ["sync"]}
futures = { workspace = true }

model = { path = "../model" }
state = { path = "../state" }
service = { path = "../service" }

[dev-dependencies]
tokio = { workspace = true }
aws-sdk-sqs = {workspace = true, features = ["test-util"]}
async-trait = {workspace = true}

state_in_memory = { path = "../state_in_memory" }
test_utils = { path = "../test_utils" }
