[package]
name = "workflow_simple"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }

aws_lambda_events = { workspace = true }
aws-config = { workspace = true }
aws-sdk-sqs = { workspace = true }
lambda_runtime = { workspace = true }

tokio = { workspace = true }

model = { path = "../../crates/model" }
service = { path = "../../crates/service" }
workflow = { path = "../../crates/workflow" }
state_in_memory = { path = "../../crates/state_in_memory" }
async-trait = {workspace = true}

[dev-dependencies]
test_utils = {path = "../../crates/test_utils"}

aws-sdk-sqs = {workspace = true, features = ["test-util"]}
aws-smithy-mocks = {workspace = true}
